Added workaround for Java 24 warnings.